tests/paczka1/fuzzy1/87840285.err
Error in line 8: xpTbwYGjC6n S350 35,3
Error in line 13: pCrXN A524 23,8
Error in line 2: XSrBR A349 11,3
Error in line 20: n1t5X0H S728 43,6
Error in line 29: xpTbwYGjC6n A349 94,6
Error in line 36: 78P7 A349 38,9
Error in line 24: S728 S728 46,8
